bolja upravljanje transakcijama i evikcijom kesiranja